<resources>
    <string name="app_name">Project Management</string>
    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on Projemanag’s Minimalist Interface.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>

    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>


    <string name="sign_in_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="please_wait">Please wait…</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="update">Update</string>
    <string name="my_profile_title">My Profile</string>
    <string name="mobile">Mobile</string>
    <string name="board_name">Board Name</string>
    <string name="create_btn">Create</string>
    <string name="create_board_title">Create Board</string>
    <string name="no_boards_available">No Boards are available!!!</string>

    <!--item_task-->
    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>
    <string name="members">Members</string>

    <string name="add_member">Add Member</string>
    <string name="cancel">Cancel</string>
    <string name="add">ADD</string>
    <string name="search_member">Add Member</string>

    <!--activity_card_details -->
    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>
    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>

    <string name="delete_card">Delete Card</string>

    <!-- alert dialog for delete card -->
    <string name="alert">Alert</string>
    <string name="confirmation_message_to_delete_card">Are you sure you want to delete this card: \'%1$s\'?</string>
    <string name="confirmation_message_to_delete_board">Are you sure you want to delete this board: \'%1$s\'?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="str_select_label_color">Select Label Color</string>
    <string name="str_select_member">Select Member</string>
    <string name="default_notification_channel_id">projemanag_notification_channel_id</string>
    <string name="edit_table">Edit Table</string>
    <string name="delete_table">Delete Table</string>
    <string name="no_archive_boards_yet">No archive boards yet!</string>
    <string name="card_name">Card Name</string>
    <string name="todo_list">ToDo List</string>
    <string name="add_todo_item">Add To Do Item</string>
    <string name="add_todo_list_item">Add To Do List Item</string>
    <string name="must_to_do">Must to do...</string>
    <string name="tv_dialog_title_change_picture">Change picture</string>
    <string name="change_picture">Change picture</string>
    <string name="save_picture_to_board_question">Do you want to save this picture for your board?</string>
    <string name="save">Save</string>
    <string name="editing">Editing</string>
    <string name="change">change</string>
    <string name="archive_board">Archive Board</string>
    <string name="activate_board">Activate Board</string>
    <string name="delete_board">Delete Board</string>
    <string name="select">Select</string>

</resources>