<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_members"
        android:orderInCategory="100"
        android:title="@string/members"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_edit_table"
        android:orderInCategory="100"
        android:title="@string/edit_table"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_delete_table"
        android:orderInCategory="100"
        android:title="@string/delete_table"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_archive_table"
        android:orderInCategory="100"
        android:title="@string/archive_board"
        app:showAsAction="never"/>

</menu>