<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_dialog_rounded"
        app:cardCornerRadius="@dimen/dialog_member_cv_cornerRadius"
        app:cardElevation="@dimen/dialog_member_cv_elevation"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dialog_member_content_padding">

            <TextView
                android:id="@+id/tvDialogTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dialog_member_title_padding"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/dialog_member_title_text_size"
                android:textStyle="bold"
                android:text="@string/change_picture" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/member_dialog_divider_height"
                android:layout_marginTop="@dimen/member_dialog_divider_marginTopBottom"
                android:layout_marginBottom="@dimen/member_dialog_divider_marginTopBottom"
                android:background="@color/divider_color" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_board_image_dialog"
                android:layout_width="@dimen/board_image_size"
                android:layout_height="@dimen/board_image_size"
                android:contentDescription="@string/image_contentDescription"
                android:src="@drawable/ic_board_place_holder"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:text="@string/save_picture_to_board_question" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/member_dialog_action_layout_height"
                android:layout_marginTop="@dimen/member_dialog_action_layout_marginTop"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_save"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="@dimen/member_dialog_action_button_padding"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/member_dialog_action_button_text_size"
                    android:text="@string/save" />

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="@dimen/member_dialog_action_button_padding"
                    android:text="@string/cancel"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="@dimen/member_dialog_action_button_text_size" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>