<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.CardDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_card_details_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_background"
        android:orientation="vertical"
        android:padding="@dimen/card_details_content_padding">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/card_details_cv_card_name_marginBottom"
            android:elevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/card_details_cv_content_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="@dimen/card_details_label_text_size"
                    android:text="@string/card_name"/>

                <LinearLayout
                    android:id="@+id/ll_card_title_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    tools:visibility="visible">

                    <TextView
                        android:id="@+id/tv_card_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/primary_text_color"
                        android:textSize="@dimen/card_title_text_size"
                        tools:text="Title" />

                    <ImageButton
                        android:id="@+id/ib_edit_card_name"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/image_contentDescription"
                        android:padding="@dimen/task_item_image_buttons_padding"
                        android:src="@drawable/ic_edit" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_card_title_edit_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <ImageButton
                        android:id="@+id/ib_close_board_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/image_contentDescription"
                        android:padding="@dimen/task_item_image_buttons_padding"
                        android:src="@drawable/ic_cancel"/>

                    <EditText
                        android:id="@+id/et_name_card_details"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints="@string/hint_card_name"
                        android:hint="@string/hint_card_name"
                        android:inputType="text"/>

                    <ImageButton
                        android:id="@+id/ib_done_card_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/image_contentDescription"
                        android:padding="@dimen/task_item_image_buttons_padding"
                        android:src="@drawable/ic_done"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/card_details_cv_content_padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/label_color"
                            android:textColor="@color/secondary_text_color"
                            android:textSize="@dimen/card_details_label_text_size" />
                        <TextView
                            android:id="@+id/tv_select_label_color"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/card_details_value_marginTop"
                            android:padding="@dimen/card_details_value_padding"
                            android:text="@string/select_color"
                            android:textColor="@color/primary_text_color" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/due_date"
                            android:textColor="@color/secondary_text_color"
                            android:textSize="@dimen/card_details_label_text_size" />

                        <TextView
                            android:id="@+id/tv_select_due_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/card_details_value_marginTop"
                            android:padding="@dimen/card_details_value_padding"
                            android:text="@string/select_due_date"
                            android:textColor="@color/primary_text_color" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_details_members_label_marginTop"
                    android:text="@string/members"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="@dimen/card_details_label_text_size" />

                <TextView
                    android:id="@+id/tv_select_members"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_details_value_marginTop"
                    android:padding="@dimen/card_details_value_padding"
                    android:text="@string/select_members"
                    android:textColor="@color/primary_text_color" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_selected_members_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_details_value_marginTop"
                    android:visibility="gone" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_details_members_label_marginTop"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="@dimen/card_details_label_text_size"
                    android:text="@string/todo_list" />

                <TextView
                    android:id="@+id/tv_add_to_do_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_details_value_marginTop"
                    android:padding="@dimen/card_details_value_padding"
                    android:textColor="@color/primary_text_color"
                    android:text="@string/add_todo_item" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_to_do_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>